Mnegubah tulisan pada placeholder input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="tanggal" id="date"></div>
         </div>
         <div class="inputField">
-            <input type="text" placeholder="Add New Project">
+            <input type="text" placeholder="Tambahkan List Baru">
             <button><i class="fas fa-plus"></i></button>
         </div>
         <ul class="todoList">
