--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
         <div class="footer">
             <span>Kamu punya <span class="pendingNumb"></span> list tertunda</span>
-            <button>Clear All</button>
+            <button>Bersihkan Semua</button>
         </div>
     </div>
 
