--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="tanggal" id="date"></div>
         </div>
         <div class="inputField">
-            <input type="text" placeholder="Tambahkan List Baru">
+            <input type="text" placeholder="Tambahkan Data Baru">
             <button><i class="fas fa-plus"></i></button>
         </div>
         <ul class="todoList">
@@ -27,6 +27,7 @@
         </div>
     </div>
 
+    
 <script src="/assets/js/app.js"></script>
 </body>
 </html>
