--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- data comes from local storage  -->
         </ul>
         <div class="footer">
-            <span>Kamu punya <span class="pendingNumb"></span> list tertunda</span>
+            <span>Kamu punya <span class="pendingNumb"></span> List Tertunda</span>
             <button>Bersihkan Semua</button>
         </div>
     </div>
